--- a/css/baojia.css
+++ b/css/baojia.css
@@ -91,7 +91,7 @@ h1, h2 {
                 margin-top: 0.32rem;
                 margin-left: 0.166rem;
                 color: grey;
-                font-size: 0.166rem; }
+                font-size: 14px; }
               .middle .middle1 .middle1-top div ul li .left span {
                 display: inline-block;
                 margin-left: 0.166rem;
